--- a/01. PARTIE LEGISLATIVE/Article L1321-10 - 23085542.md
+++ b/01. PARTIE LEGISLATIVE/Article L1321-10 - 23085542.md
@@ -1,7 +1,7 @@
 # Article L1321-10
 
 La convention ou l'accord collectif étendu ou la convention ou l'accord d'entreprise ou d'établissement mentionné à l'article
-L. 3121-33 du code du travail peut prévoir le remplacement de la période de pause par une période équivalente de repos
+L. 3121-17 du code du travail peut prévoir le remplacement de la période de pause par une période équivalente de repos
 compensateur attribuée, au plus tard, avant la fin de la journée suivante.
 
 **Liens relatifs à cet article**
@@ -11,13 +11,13 @@ compensateur attribuée, au plus tard, avant la fin de la journée suivante.
 	  - Décret n°2016-755 du 8 juin 2016 - art. 19 (VD)
 	  - Décret n°2016-755 du 8 juin 2016 - art. 31 (VD)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail - art. L220-3 (VT), alinéa 3, ecqc la convention ou l'accord
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3121-33
+	  - Code du travail - art. L3121-17
 
 	**Codifié par**:
 
