--- a/01. PARTIE LEGISLATIVE/Article L1321-6 - 23085555.md
+++ b/01. PARTIE LEGISLATIVE/Article L1321-6 - 23085555.md
@@ -3,23 +3,24 @@
 Les dispositions de la présente section s'appliquent aux salariés roulants ou navigants des entreprises mentionnées à
 l'article L. 1321-1. 
 
-Les dispositions des articles L. 3122-34 et L. 3122-35 du code du travail ne s'appliquent pas aux salariés roulants ou
-navigants des entreprises mentionnées à l'article L. 1321-1.
+Les dispositions des articles L. 3122-6, L. 3122-7, L. 3122-17, L. 3122-18 et L. 3122-24 du code du travail ne s'appliquent
+pas aux salariés roulants ou navigants des entreprises mentionnées à l'article L. 1321-1.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3122-34
+	  - Code du travail - art. L3122-17
+	  - Code du travail - art. L3122-6
 	  - Code des transports - art. L1321-1
 
 	**Cité par**:
 
-	  - Code des transports - art. L1821-8-1 (M)
+	  - Code des transports - art. L1821-8-1 (V)
 	  - Code des transports - art. R1321-2 (VD)
 
 	**Codifié par**:
