--- a/01. PARTIE LEGISLATIVE/Article L1321-7 - 23085552.md
+++ b/01. PARTIE LEGISLATIVE/Article L1321-7 - 23085552.md
@@ -1,21 +1,20 @@
 # Article L1321-7
 
-Tout travail entre 22 heures et 5 heures est considéré comme travail de nuit. 
+Tout travail entre 22 heures et 5 heures pour le personnel roulant et entre 23 heures et 6 heures pour le personnel navigant
+est considéré comme travail de nuit. 
 
 Une autre période de sept heures consécutives comprise entre 21 heures et 7 heures, incluant l'intervalle entre 24 heures et
-5 heures, peut être substituée à la période fixée à l'alinéa précédent par une convention ou un accord collectif étendu ou
-une convention ou un accord d'entreprise ou d'établissement. A défaut d'accord et lorsque les caractéristiques particulières
-de l'activité de l'entreprise le justifient, cette substitution peut être autorisée par l'inspecteur du travail, après
-consultation des délégués syndicaux et avis du comité d'entreprise ou des délégués du personnel, s'ils existent. 
+5 heures, peut être substituée à la période fixée au premier alinéa pour le personnel roulant, par une convention ou un
+accord collectif étendu ou une convention ou un accord d'entreprise ou d'établissement. A défaut d'accord et lorsque les
+caractéristiques particulières de l'activité de l'entreprise le justifient, cette substitution peut être autorisée par
+l'inspecteur du travail, après consultation des délégués syndicaux et avis du comité d'entreprise ou des délégués du
+personnel, s'ils existent. 
 
-Pour l'application des dispositions de l'article L. 3122-31 du code du travail, la période nocturne à retenir est celle
-définie en application des deux alinéas précédents.
+Pour l'application des articles L. 3122-5, 
+L. 3122-16 et L. 3122-23 du code du travail, la période nocturne à retenir est celle définie en application des deux alinéas
+précédents.
 
 **Liens relatifs à cet article**
-
-	**Modifié par**:
-
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
 
 	**Cité par**:
 
@@ -25,9 +24,16 @@ définie en application des deux alinéas précédents.
 	  - Code des transports - art. L1821-8-1 (V)
 	  - Code des transports - art. L3312-1 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 14
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+
 	**Cite**:
 
-	  - Code du travail - art. L3122-31
+	  - Code du travail - art. L3122-16
+	  - Code du travail - art. L3122-23
+	  - Code du travail - art. L3122-5
 
 	**Codifié par**:
 
