--- a/01. PARTIE LEGISLATIVE/Article L1324-10 - 23085497.md
+++ b/01. PARTIE LEGISLATIVE/Article L1324-10 - 23085497.md
@@ -3,15 +3,15 @@
 Au-delà de huit jours de grève, l'employeur, une organisation syndicale représentative ou le médiateur éventuellement désigné
 peut décider l'organisation par l'entreprise d'une consultation, ouverte aux salariés concernés par les motifs figurant dans
 le préavis, et portant sur la poursuite de la grève. Les conditions du vote sont définies, par l'employeur, dans les vingt-
-quatre heures qui suivent la décision d'organiser la consultation. L'employeur en informe l'inspecteur du travail. La
-consultation est assurée dans des conditions garantissant le secret du vote. Son résultat n'affecte pas l'exercice du droit
-de grève.
+quatre heures qui suivent la décision d'organiser la consultation. L'employeur en informe l'agent de contrôle de l'inspection
+du travail mentionné à l'article L. 8112-1 du code du travail. La consultation est assurée dans des conditions garantissant
+le secret du vote. Son résultat n'affecte pas l'exercice du droit de grève.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2007-1224 du 21 août 2007 - art. 6 (VT), alinéa 2, paragraphe II
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
 
 	**Cité par**:
 
