--- a/01. PARTIE LEGISLATIVE/Article L1821-8-1 - 29787075.md
+++ b/01. PARTIE LEGISLATIVE/Article L1821-8-1 - 29787075.md
@@ -8,11 +8,12 @@ Mayotte :
 2° A l'article L. 1321-5, les mots : " chapitre II du titre III du livre Ier de la troisième partie du code du travail " sont
 remplacés par les mots : " chapitre Ier du titre II du livre II du code du travail applicable à Mayotte " ; 
 
-3° Au deuxième alinéa de l'article L. 1321-6, les mots : " des articles L. 3122-34 et L. 3122-35 du code du travail " sont
-remplacés par les mots : " de l'article L. 213-4 du code du travail applicable à Mayotte " ; 
+3° Au deuxième alinéa de l'article L. 1321-6, les mots : " des articles L. 3122-6, L. 3122-7, L. 3122-17, L. 3122-18 et L.
+3122-24 du code du travail " sont remplacés par les mots : " de l'article L. 213-4 du code du travail applicable à Mayotte
+" ; 
 
-4° Au troisième alinéa de l'article L. 1321-7, les mots : " de l'article L. 3122-31 du code du travail " sont remplacés par
-les mots : " de l'article L. 213-3 du code du travail applicable à Mayotte " ; 
+4° Au troisième alinéa de l'article L. 1321-7, les mots : " des articles L. 3122-5, L. 3122-16 et L. 3122-23 du code du
+travail " sont remplacés par les mots : " de l'article L. 213-3 du code du travail applicable à Mayotte " ; 
 
 5° Les dispositions de la section 6 du chapitre Ier du titre II du livre III ne sont pas applicables.
 
@@ -20,15 +21,13 @@ les mots : " de l'article L. 213-3 du code du travail applicable à Mayotte " ;
 
 	**Modifié par**:
 
-	  - Loi n°2015-990 du 6 août 2015 - art. 281
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3122-31 (V)
-	  - Code du travail - art. L3122-34 (V)
 	  - Code du travail applicable à Mayotte. - art. L213-3
-	  - Code du travail applicable à Mayotte. - art. L213-4 (V)
+	  - Code du travail applicable à Mayotte. - art. L213-4
 	  - Code des transports - art. L1321-4
 	  - Code des transports - art. L1321-5
-	  - Code des transports - art. L1321-6
+	  - Code des transports - art. L1321-6 (V)
 	  - Code des transports - art. L1321-7
