--- a/01. PARTIE LEGISLATIVE/Article L3312-3 - 23083709.md
+++ b/01. PARTIE LEGISLATIVE/Article L3312-3 - 23083709.md
@@ -1,19 +1,20 @@
 # Article L3312-3
 
 Pour les activités de transport de personnes présentant le caractère de service public, à défaut de convention ou d'accord
-collectif étendu, un décret en Conseil d'Etat peut prévoir les conditions dans lesquelles des dérogations aux dispositions de
-l'article L. 3123-16 du code du travail relatives aux interruptions de la journée de travail d'un salarié à temps partiel
-peuvent être autorisées par l'autorité administrative compétente.
+collectif étendu, un décret en Conseil d'Etat peut prévoir les conditions dans lesquelles des dérogations aux dispositions
+des articles L. 3123-23 et L. 3123-30 du code du travail relatives aux interruptions de la journée de travail d'un salarié à
+temps partiel peuvent être autorisées par l'autorité administrative compétente.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Ordonnance n°2012-814 du 22 juin 2012 - art. 1
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3123-16
+	  - Code du travail - art. L3123-23
+	  - Code du travail - art. L3123-30
 
 	**Cité par**:
 
