--- a/01. PARTIE LEGISLATIVE/Article L4312-3-2 - 25196469.md
+++ b/01. PARTIE LEGISLATIVE/Article L4312-3-2 - 25196469.md
@@ -99,15 +99,16 @@ moins 10 % des suffrages exprimés aux dernières élections du comité techniqu
 du comité technique unique s'il est constitué. 
 
 V. ― Pour les salariés mentionnés au 4° de l'article L. 4312-3-1 du présent code, la validité des accords collectifs de
-travail prévus au livre II de la deuxième partie du code du travail est subordonnée à leur signature par une ou plusieurs
-organisations syndicales représentatives ayant recueilli au moins 30 % des suffrages exprimés au premier tour des dernières
-élections du comité d'entreprise et à l'absence d'opposition d'une ou plusieurs organisations syndicales représentatives
-ayant recueilli au moins la majorité des suffrages exprimés à ces mêmes élections. L'opposition est exprimée dans un délai de
-huit jours à compter de la date de notification de l'accord, dans les conditions prévues à l'article L. 2231-8 du même code. 
+travail prévus au livre II de la deuxième partie du code du travail est subordonnée à leur signature par, d'une part,
+l'employeur ou son représentant et, d'autre part, une ou plusieurs organisations syndicales représentatives ayant recueilli
+plus de 50 % des suffrages exprimésen faveur d'organisations représentatives au premier tour des dernières élections du
+comité d'entreprise. Les règles de validité de ces accords sont celles prévues à l'article L. 2232-12 du code du travail. Les
+taux de 30 % et de 50 % mentionnés au même article sont appréciés à l'échelle du collège des salariés mentionnés au 4° de
+l'article L. 4312-3-1 du présent code. 
 
 En application du IV de l'article 8 bis de la loi n° 83-634 du 13 juillet 1983 précitée, un accord est valide, pour les
 personnels mentionnés au 1° de l'article L. 4312-3-1 du présent code, s'il est signé par une ou plusieurs organisations
-syndicales de fonctionnaires ayant recueilli au moins 50 %   des suffrages exprimés en faveur des organisations habilitées à
+syndicales de fonctionnaires ayant recueilli au moins 50 % des suffrages exprimés en faveur des organisations habilitées à
 négocier lors des dernières élections au comité technique. Le présent alinéa est également applicable pour déterminer la
 validité des accords pour les personnels mentionnés aux 2° et 3° du même article L. 4312-3-1. 
 
@@ -121,6 +122,15 @@ les salariés régis par le code du travail, de la protection prévue au livre I
 
 VIII. ― Les agents mentionnés aux 1° à 3° de l'article L. 4312-3-1 du présent code demeurent électeurs au comité technique
 ministériel du ministère chargé du développement durable.
+
+**Nota:**
+
+Conformément à l'article 21 IX de la loi n° 2016-1088 du 8 août 2016, les présentes dispositions s'appliquent à compter du
+1er janvier 2017 aux accords collectifs qui portent sur la durée du travail, les repos et les congés et, dès la publication
+de la présente loi, aux accords mentionnés à l'article L. 2254-2 du code du travail.
+
+Elles s'appliquent à compter du 1er septembre 2019 aux autres accords collectifs, à l'exception de ceux mentionnés à
+l'article L. 5125-1 du code du travail.
 
 **Liens relatifs à cet article**
 
@@ -142,7 +152,7 @@ ministériel du ministère chargé du développement durable.
 	  - Loi n°84-16 du 11 janvier 1984 - art. 16
 	  - Code du travail - art. L2122-1
 	  - Code du travail - art. L2142-1
-	  - Code du travail - art. L2231-8
+	  - Code du travail - art. L2232-12 (V)
 	  - Code du travail - art. L2323-1
 	  - Code du travail - art. L2324-4
 	  - Code du travail - art. L2325-1
@@ -151,4 +161,4 @@ ministériel du ministère chargé du développement durable.
 
 	**Modifié par**:
 
-	  - Loi n°2016-483 du 20 avril 2016 - art. 57
+	  - Loi n°2016-1088 du 8 août 2016 - art. 21 (V)
