--- a/01. PARTIE LEGISLATIVE/Article L4511-2 - 23082219.md
+++ b/01. PARTIE LEGISLATIVE/Article L4511-2 - 23082219.md
@@ -5,15 +5,19 @@ durée quotidienne du travail fixée par l'article L. 1321-8, sous réserve de p
 quotidienne du travail qui n'excède pas douze heures par période de vingt-quatre heures et que ceux-ci bénéficient, outre les
 jours de repos et de congés légaux, de jours de repos supplémentaires en nombre suffisant.
 
+Sans préjudice de l'article L. 1321-8 et du premier alinéa du présent article, le nombre maximal hebdomadaire d'heures de
+travail des personnels navigants pendant la période nocturne ne peut excéder quarante-deux heures sur une période de sept
+jours.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail - art. L213-11 (Ab), alinéa 6, ecqc les entreprises de navigation intérieure
+	  - Loi n°2016-1088 du 8 août 2016 - art. 14
 
 	**Cite**:
 
-	  - Code des transports - art. L1321-8 (V)
+	  - Code des transports - art. L1321-8
 
 	**Codifié par**:
 
