--- a/01. PARTIE LEGISLATIVE/Article L5542-51 - 26571045.md
+++ b/01. PARTIE LEGISLATIVE/Article L5542-51 - 26571045.md
@@ -1,6 +1,6 @@
 # Article L5542-51
 
-Est puni des peines sanctionnant le délit prévu par l'article L. 1254-2 du code du travail le fait pour l'employeur : 
+Est puni des peines sanctionnant le délit prévu par l'article L. 1255-2 du code du travail le fait pour l'employeur : 
 
 1° De recruter tous gens de mer sans avoir établi ou sans leur avoir transmis dans le délai prévu à l'article L. 5542-5 du
 présent code un contrat de travail écrit ; 
@@ -29,11 +29,11 @@ articles L. 5542-3 et L. 5542-4, celles figurant à l'article L. 5542-9.
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 25 (V)
+	  - Loi n°2016-1088 du 8 août 2016 - art. 85
 
 	**Cite**:
 
-	  - Code du travail - art. L1254-2
-	  - Code des transports - art. L5542-3 (V)
+	  - Code du travail - art. L1254-2 (V)
+	  - Code des transports - art. L5542-3
 	  - Code des transports - art. L5542-5
-	  - Code des transports - art. L5542-9 (V)
+	  - Code des transports - art. L5542-9
