--- a/01. PARTIE LEGISLATIVE/Article L5544-25 - 23079533.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-25 - 23079533.md
@@ -1,19 +1,14 @@
 # Article L5544-25
 
-Les conditions d'application aux marins des dispositions des articles L. 3142-78 à L. 3142-98 et L. 3142-100 à L. 3142-107 du
-code du travail relatifs au congé sabbatique et au congé pour création d'entreprise sont fixées, compte tenu des adaptations
+Les conditions d'application aux marins des dispositions du chapitre II du titre IV du livre Ier de la troisième partie  du
+code du travail relatives au congé sabbatique et au congé pour création d'entreprise sont fixées, compte tenu des adaptations
 nécessaires, par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°84-4 du 3 janvier 1984 - art. 3 (Ab)
-
-	**Cite**:
-
-	  - Code du travail - art. L3142-100 (V)
-	  - Code du travail - art. L3142-78 (V)
+	  - Loi n°2016-1088 du 8 août 2016 - art. 9
 
 	**Codifié par**:
 
