--- a/01. PARTIE LEGISLATIVE/Article L5544-8 - 23079603.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-8 - 23079603.md
@@ -1,8 +1,9 @@
 # Article L5544-8
 
-Les dispositions des articles L. 3121-22 et L. 3121-24 du code du travail sont applicables aux marins. Sans préjudice des
-dispositions de l'article L. 3121-39 du même code, une convention ou un accord collectif peut prévoir l'institution de
-modalités forfaitaires collectives de rémunération du travail supplémentaire.
+Les dispositions de l'article L. 3121-28, du 1° du I, du 2° du II et du III de l'article L. 3121-33 ainsi que des articles L.
+3121-36 et L. 3121-37 du code du travail sont applicables aux marins. Sans préjudice des dispositions des articles L. 3121-63
+et L. 3121-64 du même code, une convention ou un accord collectif peut prévoir l'institution de modalités forfaitaires
+collectives de rémunération du travail supplémentaire.
 
 **Liens relatifs à cet article**
 
@@ -11,15 +12,17 @@ modalités forfaitaires collectives de rémunération du travail supplémentaire
 	  - Décret n°2016-754 du 7 juin 2016 (VD)
 	  - Code des transports - art. L5541-1-1 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+
 	**Cite**:
 
-	  - Code du travail - art. L3121-22 (V)
-	  - Code du travail - art. L3121-24 (V)
-	  - Code du travail - art. L3121-39 (V)
-
-	**Anciens textes**:
-
-	  - Code du travail maritime - art. 26 (Ab), alinéas 2 et 3
+	  - Code du travail - art. L3121-28 (V)
+	  - Code du travail - art. L3121-33 (V)
+	  - Code du travail - art. L3121-36 (V)
+	  - Code du travail - art. L3121-37 (V)
+	  - Code du travail - art. L3121-63 (V)
 
 	**Codifié par**:
 
