--- a/01. PARTIE LEGISLATIVE/Article L5548-2 - 23079309.md
+++ b/01. PARTIE LEGISLATIVE/Article L5548-2 - 23079309.md
@@ -1,8 +1,8 @@
 # Article L5548-2
 
-L'inspecteur ou le contrôleur du travail participe au contrôle de l'application des normes de l'Organisation internationale
-du travail relatives au travail des gens de mer embarqués à bord d'un navire battant pavillon étranger faisant escale dans un
-port français.
+L'agent de contrôle de l'inspection du travail mentionné à l'article L. 8112-1 du code du travail participe au contrôle de
+l'application des normes de l'Organisation internationale du travail relatives au travail des gens de mer embarqués à bord
+d'un navire battant pavillon étranger faisant escale dans un port français.
 
 **Liens relatifs à cet article**
 
@@ -13,7 +13,7 @@ port français.
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 41
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
 
 	**Codifié par**:
 
