--- a/01. PARTIE LEGISLATIVE/Article L5548-3 - 23079306.md
+++ b/01. PARTIE LEGISLATIVE/Article L5548-3 - 23079306.md
@@ -1,9 +1,9 @@
 # Article L5548-3
 
-Indépendamment des inspecteurs et contrôleurs du travail, les officiers et fonctionnaires affectés dans les services exerçant
-des missions de contrôle dans le domaine des affaires maritimes sous l'autorité ou à la disposition du ministre chargé de la
-mer sont chargés de constater les infractions aux dispositions du code du travail en tant qu'elles sont applicables aux gens
-de mer, ainsi qu'aux dispositions du présent titre.
+Indépendamment des agents de contrôle de l'inspection du travail, les officiers et fonctionnaires affectés dans les services
+exerçant des missions de contrôle dans le domaine des affaires maritimes sous l'autorité ou à la disposition du ministre
+chargé de la mer sont chargés de constater les infractions aux dispositions du code du travail en tant qu'elles sont
+applicables aux gens de mer, ainsi qu'aux dispositions du présent titre.
 
 Pour les navires touchant les rades et ports étrangers, la constatation des infractions mentionnées au premier alinéa est
 confiée à l'autorité compétente de l'Etat en fonction dans ce pays.
@@ -12,12 +12,12 @@ confiée à l'autorité compétente de l'Etat en fonction dans ce pays.
 
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 31
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. D5565-2 (VD)
-	  - Code des transports - art. L5548-4 (M)
+	  - Code des transports - art. L5548-4 (V)
 	  - Code des transports - art. L5565-2 (V)
 	  - Code des transports - art. L5795-14 (V)
 
