--- a/01. PARTIE LEGISLATIVE/Article L6525-1 - 23077633.md
+++ b/01. PARTIE LEGISLATIVE/Article L6525-1 - 23077633.md
@@ -1,19 +1,19 @@
 # Article L6525-1
 
-Les articles L. 3121-33, L. 3122-29 à L. 3122-45, L. 3131-1 et L. 3131-2 du code du travail ne s'appliquent pas au personnel
+Les articles L. 3121-16, L. 3122-1 à L. 3122-24, L. 3131-1 à L. 3131-3 du code du travail ne s'appliquent pas au personnel
 navigant de l'aviation civile.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+
 	**Cite**:
 
-	  - Code du travail - art. L3121-33 (V)
-	  - Code du travail - art. L3122-29 (V)
-	  - Code du travail - art. L3131-1 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L422-5 (Ab), alinéa 2 du paragraphe II, exclusion du code du travail
+	  - Code du travail - art. L3121-16
+	  - Code du travail - art. L3122-1
+	  - Code du travail - art. L3131-1
 
 	**Codifié par**:
 
