--- a/01. PARTIE LEGISLATIVE/Article L6525-3 - 23077628.md
+++ b/01. PARTIE LEGISLATIVE/Article L6525-3 - 23077628.md
@@ -1,21 +1,21 @@
 # Article L6525-3
 
 Pour les personnels navigants de l'aéronautique civile, il est admis, dans les conditions d'exploitation des entreprises de
-transport et de travail aérien, qu'à la durée légale du travail effectif, telle que définie au premier alinéa de l'article L.
-3121-10 du code du travail, correspond un temps de travail exprimé en heures de vol par mois, trimestre ou année civile,
-déterminé par décret en Conseil d'Etat. Par exception à l'article L. 3121-22 du même code, les heures supplémentaires de vol
-donnent lieu à une majoration de 25 % portant sur les éléments de rémunération, à l'exception des remboursements de frais.
+transport et de travail aérien, qu'à la durée légale du travail effectif, telle que définie à l'article L. 3121-27 du code du
+travail, correspond un temps de travail exprimé en heures de vol par mois, trimestre ou année civile, déterminé par décret en
+Conseil d'Etat. Par exception aux articles L. 3121-33 et L. 3121-36 du même code, les heures supplémentaires de vol donnent
+lieu à une majoration de 25 % portant sur les éléments de rémunération, à l'exception des remboursements de frais.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+
 	**Cite**:
 
-	  - Code du travail - art. L3121-10
-	  - Code du travail - art. L3121-22 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L422-5 (Ab), alinéa 1 du paragraphe II, durée légale de travail effectif
+	  - Code du travail - art. L3121-27
+	  - Code du travail - art. L3121-33
 
 	**Codifié par**:
 
