--- a/01. PARTIE LEGISLATIVE/Article L3312-1 - 23083715.md
+++ b/01. PARTIE LEGISLATIVE/Article L3312-1 - 23083715.md
@@ -1,9 +1,10 @@
 # Article L3312-1
 
 Lorsqu'un salarié appartenant au personnel roulant d'une entreprise de transport routier, à l'exception des entreprises de
-transport sanitaire, est un travailleur de nuit au sens de l'article L. 3122-31 du code du travail et sans préjudice de la
-période définie à l'article L. 1321-7 ou lorsqu'il accomplit, sur une période de vingt-quatre heures, une partie de son
-travail dans l'intervalle compris entre 24 heures et 5 heures, sa durée quotidienne du travail ne peut excéder dix heures. 
+transport sanitaire, est un travailleur de nuit au sens des articles L. 3122-5, L. 3122-16 et L. 3122-23 du code du travail
+et sans préjudice de la période définie à l'article L. 1321-7 ou lorsqu'il accomplit, sur une période de vingt-quatre heures,
+une partie de son travail dans l'intervalle compris entre 24 heures et 5 heures, sa durée quotidienne du travail ne peut
+excéder dix heures. 
 
 Il ne peut être dérogé à ces dispositions qu'en cas de circonstances exceptionnelles, dans des conditions et selon des
 modalités fixées par voie réglementaire, après consultation des organisations syndicales représentatives au plan national des
@@ -11,14 +12,16 @@ employeurs et des salariés du secteur.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Ordonnance n°2012-814 du 22 juin 2012 - art. 1
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3122-31
-	  - Code des transports - art. L1321-7
+	  - Code du travail - art. L3122-16 (V)
+	  - Code du travail - art. L3122-23 (V)
+	  - Code du travail - art. L3122-5 (V)
+	  - Code des transports - art. L1321-7 (V)
 
 	**Cité par**:
 
