--- a/01. PARTIE LEGISLATIVE/Article L3313-2 - 23083701.md
+++ b/01. PARTIE LEGISLATIVE/Article L3313-2 - 23083701.md
@@ -1,17 +1,17 @@
 # Article L3313-2
 
-Les dispositions des articles L. 3121-42 et L. 3121-43 du code du travail relatives aux conventions de forfait sur l'année ne
-sont pas applicables aux salariés appartenant au personnel roulant des entreprises de transport routier.
+Les articles L. 3121-56 et L. 3121-58 du code du travail relatives aux conventions de forfait sur l'année ne sont pas
+applicables aux salariés appartenant au personnel roulant des entreprises de transport routier.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail - art. L212-19 (Ab)
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3121-42 (V)
+	  - Code du travail - art. L3121-56
 
 	**Cité par**:
 
