--- a/01. PARTIE LEGISLATIVE/Article L4511-1 - 23082227.md
+++ b/01. PARTIE LEGISLATIVE/Article L4511-1 - 23082227.md
@@ -1,21 +1,28 @@
 # Article L4511-1
 
-Une convention ou un accord collectif de branche étendu peut déroger aux dispositions des articles L. 3121-34 à L. 3121-36 du
-code du travail relatives aux durées maximales quotidienne et hebdomadaire du travail, en ce qui concerne le personnel
-navigant travaillant sur des bateaux exploités en relèves pour l'application de l'article L. 3122-2 du même code relatif aux
-modalités d'aménagement du temps de travail et à la répartition de la durée du travail sur une période supérieure à la
-semaine et au plus égale à l'année.
+Une convention ou un accord collectif de branche étendu peut déroger aux dispositions de l'article L. 3121-20 du code du
+travail relatives à la durée maximale hebdomadaire de travail et aux dispositions réglementaires du code des transports
+relatives à la durée quotidienne de travail effectif et à la durée hebdomadaire moyenne de travail, en ce qui concerne le
+personnel navigant travaillant sur des bateaux exploités en relèves pour l'application de l'article L. 3121-44 du même code
+relatif aux modalités d'aménagement du temps de travail et à la répartition de la durée du travail sur une période supérieure
+à la semaine. 
+
+La convention ou l'accord collectif de branche étendu ne peut avoir pour effet de porter la durée quotidienne de travail
+effectif à plus de quatorze heures et la durée maximale hebdomadaire de travail à plus de quatre-vingt-quatre heures. Il ne
+peut pas non plus avoir pour effet de porter à plus de soixante-douze heures la durée hebdomadaire moyenne de travail
+calculée sur une période quelconque de seize semaines consécutives.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail - art. L212-18 (Ab), alinéa 9
+	  - Loi n°2016-1088 du 8 août 2016 - art. 14
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L3121-34 (V)
-	  - Code du travail - art. L3122-2 (V)
+	  - Code du travail - art. L3121-20 (V)
+	  - Code du travail - art. L3121-44 (V)
 
 	**Cité par**:
 
