--- a/01. PARTIE LEGISLATIVE/Article L5243-2-3 - 24149843.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-2-3 - 24149843.md
@@ -1,10 +1,11 @@
 # Article L5243-2-3
 
-Les inspecteurs et les contrôleurs du travail sont habilités à rechercher et à constater les infractions réprimées par les
-dispositions du présent titre qui relèvent de leur domaine particulier de compétence.
+Les agents de contrôle de l'inspection du travail mentionnés à l'article L. 8112-1 du code du travail sont habilités à
+rechercher et à constater les infractions réprimées par les dispositions du présent titre qui relèvent de leur domaine
+particulier de compétence.
 
 **Liens relatifs à cet article**
 
 	**Créé par**:
 
-	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 6
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
