--- a/01. PARTIE LEGISLATIVE/Article L5544-1 - 23079637.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-1 - 23079637.md
@@ -1,8 +1,8 @@
 # Article L5544-1
 
 Sauf mention contraire, les articles L. 1222-7, 
-L. 3111-2, L. 3121-1 à L. 3121-37, L. 3121-39, L. 3121-52 à L. 3121-54, L. 3122-1, 
-L. 3122-4 à L. 3122-47, L. 3131-1, L. 3131-2, L. 3162-1 à L. 3162-3, L. 3163-1 à L. 3163-3, 
+L. 3111-2, L. 3121-1 à L. 3121-39, L. 3121-43, L. 3121-48 à L. 3121-52, L. 3121-63, L. 3121-67 à L. 3121-69, L. 3122-1 à L.
+3122-24 et L. 3131-1 à L. 3131-3, L. 3162-1 à L. 3162-3, L. 3163-1 à L. 3163-3, 
 L. 3164-1, L. 3171-1, 
 L. 3171-3, L. 3171-4 et L. 4612-16 du code du travail ne sont pas applicables aux marins.
 
@@ -14,24 +14,25 @@ L. 3171-3, L. 3171-4 et L. 4612-16 du code du travail ne sont pas applicables au
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 25 (V)
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L1222-7 (V)
-	  - Code du travail - art. L3111-2 (V)
+	  - Code du travail - art. L1222-7
+	  - Code du travail - art. L3111-2
 	  - Code du travail - art. L3121-1 (V)
-	  - Code du travail - art. L3121-39 (V)
-	  - Code du travail - art. L3121-52 (V)
+	  - Code du travail - art. L3121-43 (V)
+	  - Code du travail - art. L3121-48 (V)
+	  - Code du travail - art. L3121-63 (V)
+	  - Code du travail - art. L3121-67 (V)
 	  - Code du travail - art. L3122-1 (V)
-	  - Code du travail - art. L3122-4 (V)
 	  - Code du travail - art. L3131-1 (V)
-	  - Code du travail - art. L3162-1 (V)
-	  - Code du travail - art. L3163-1 (V)
-	  - Code du travail - art. L3164-1 (V)
-	  - Code du travail - art. L3171-1 (V)
+	  - Code du travail - art. L3162-1
+	  - Code du travail - art. L3163-1
+	  - Code du travail - art. L3164-1
+	  - Code du travail - art. L3171-1
 	  - Code du travail - art. L3171-3 (V)
-	  - Code du travail - art. L4612-16 (V)
+	  - Code du travail - art. L4612-16
 
 	**Cité par**:
 
