--- a/01. PARTIE LEGISLATIVE/Article L5544-10 - 23079589.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-10 - 23079589.md
@@ -1,17 +1,17 @@
 # Article L5544-10
 
-Les dispositions des articles L. 3123-1 à L. 3123-37 du code du travail sont applicables aux marins dans des conditions
+Les dispositions des articles L. 3123-1 à L. 3123-38 du code du travail sont applicables aux marins dans des conditions
 fixées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+
 	**Cite**:
 
-	  - Code du travail - art. L3123-1 (V)
-
-	**Anciens textes**:
-
-	  - Code du travail maritime - art. 24-1 (Ab), sauf ecqc l'art. 212-4-16 du code du travail
+	  - Code du travail - art. L3123-1
 
 	**Cité par**:
 
