--- a/01. PARTIE LEGISLATIVE/Article L5544-18 - 23079556.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-18 - 23079556.md
@@ -15,20 +15,20 @@ délai maximum dans lequel il doit être pris.
 
 A défaut de convention ou d'accord collectif de travail, l'employeur fixe celle de ces modalités qu'il retient, en se
 référant aux usages et après consultation du comité d'entreprise et des délégués de bord, s'ils existent. Il en informe
-l'inspecteur du travail.
+l'agent de contrôle de l'inspection du travail mentionné à l'article L. 8112-1 du code du travail.
 
 Les modalités d'application du présent article, notamment le délai au-delà duquel le repos hebdomadaire ne peut être différé,
 sont fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
+
 	**Cite**:
 
 	  - Code du travail - art. L3132-3
-
-	**Anciens textes**:
-
-	  - Code du travail maritime - art. 28 (Ab)
 
 	**Cité par**:
 
