--- a/01. PARTIE LEGISLATIVE/Article L5544-3 - 23079630.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-3 - 23079630.md
@@ -1,19 +1,18 @@
 # Article L5544-3
 
-La disposition relative à la période d'astreinte mentionnée aux articles L. 3121-5 à L. 3121-8, 
-L. 3171-1 et L. 3171-3 du code du travail est applicable aux marins dans des conditions fixées par voie réglementaire.
+Les dispositions relatives à la période d'astreinte mentionnée aux articles L. 3121-9 à L. 3121-12, L. 3171-1 et L. 3171-3 du
+code du travail sont applicables aux marins dans des conditions fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+
 	**Cite**:
 
-	  - Code du travail - art. L3121-5 (V)
-	  - Code du travail - art. L3171-1 (V)
-	  - Code du travail - art. L3171-3 (V)
-
-	**Anciens textes**:
-
-	  - Code du travail maritime - art. 24-2 (Ab), alinéa 2
+	  - Code du travail - art. L3121-9
+	  - Code du travail - art. L3171-1
 
 	**Codifié par**:
 
