--- a/01. PARTIE LEGISLATIVE/Article L5544-31 - 23079516.md
+++ b/01. PARTIE LEGISLATIVE/Article L5544-31 - 23079516.md
@@ -4,14 +4,15 @@ Les jeunes travailleurs bénéficient d'un repos hebdomadaire, tant à la mer qu
 heures consécutives, comprenant si possible le dimanche.
 
 Lorsque des raisons techniques ou d'organisation le justifient, cette période de repos peut être réduite, sans pouvoir être
-inférieure à trente-six heures consécutives. Dans ce cas, le capitaine ou l'employeur en informe l'inspecteur du travail au
-plus tard dès le retour du navire et justifie des mesures compensatoires prises ou envisagées.
+inférieure à trente-six heures consécutives. Dans ce cas, le capitaine ou l'employeur en informe l'agent de contrôle de
+l'inspection du travail mentionné à l'article L. 8112-1 du code du travail au plus tard dès le retour du navire et justifie
+des mesures compensatoires prises ou envisagées.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail maritime - art. 114 (Ab), alinéa 4
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
 
 	**Codifié par**:
 
