--- a/01. PARTIE LEGISLATIVE/Article L5548-1 - 23079311.md
+++ b/01. PARTIE LEGISLATIVE/Article L5548-1 - 23079311.md
@@ -1,11 +1,12 @@
 # Article L5548-1
 
-L'inspecteur ou le contrôleur du travail est chargé du contrôle de l'application de celles des dispositions de la législation
-du travail et de la législation sociale qui ont été rendues applicables aux équipages de navires battant pavillon étranger.
+L'agent de contrôle de l'inspection du travail mentionné à l'article L. 8112-1 du code du travail est chargé du contrôle de
+l'application de celles des dispositions de la législation du travail et de la législation sociale qui ont été rendues
+applicables aux équipages de navires battant pavillon étranger.
 
-Pour l'exercice de ces missions, l'inspecteur ou le contrôleur du travail est habilité à demander à l'employeur, ainsi qu'à
-toute personne employée à quelque titre que ce soit à bord d'un navire, de justifier de son identité, de son adresse et, le
-cas échéant, de sa qualité de gens de mer.
+Pour l'exercice de ces missions, l'agent de contrôle de l'inspection du travail mentionné à l'article L. 8112-1 du code du
+travail est habilité à demander à l'employeur, ainsi qu'à toute personne employée à quelque titre que ce soit à bord d'un
+navire, de justifier de son identité, de son adresse et, le cas échéant, de sa qualité de gens de mer.
 
 Lorsqu'ils existent en vertu de la législation du pavillon du navire, le capitaine informe les représentants des gens de mer
 à bord du navire de la visite de l'inspecteur ou du contrôleur du travail, afin qu'ils puissent assister à cette visite s'ils
@@ -27,4 +28,4 @@ le souhaitent.
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 41
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
