--- a/01. PARTIE LEGISLATIVE/Article L5548-4 - 23079304.md
+++ b/01. PARTIE LEGISLATIVE/Article L5548-4 - 23079304.md
@@ -1,20 +1,20 @@
 # Article L5548-4
 
-Les inspecteurs, contrôleurs, officiers et fonctionnaires mentionnés au premier alinéa de l'article L. 5548-3 sont habilités
-à constater les infractions aux dispositions de la législation du travail applicable aux personnels embarqués à bord des
-navires immatriculés à Mayotte, en Nouvelle-Calédonie, en Polynésie française, à Wallis-et-Futuna et dans les Terres
-australes et antarctiques françaises, qui font escale dans un port d'un département français ou à Saint-Barthélemy, Saint-
-Martin ou Saint-Pierre-et-Miquelon.
+Les agents de contrôle de l'inspection du travail, officiers et fonctionnaires mentionnés au premier alinéa de l'article L.
+5548-3 sont habilités à constater les infractions aux dispositions de la législation du travail applicable aux personnels
+embarqués à bord des navires immatriculés à Mayotte, en Nouvelle-Calédonie, en Polynésie française, à Wallis-et-Futuna et
+dans les Terres australes et antarctiques françaises, qui font escale dans un port d'un département français ou à Saint-
+Barthélemy, Saint-Martin ou Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 31
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L5548-3
+	  - Code des transports - art. L5548-3 (V)
 
 	**Codifié par**:
 
