--- a/01. PARTIE LEGISLATIVE/Article L5641-1 - 23078898.md
+++ b/01. PARTIE LEGISLATIVE/Article L5641-1 - 23078898.md
@@ -1,19 +1,17 @@
 # Article L5641-1
 
-L'autorité chargée de l'inspection du travail maritime assure l'inspection du travail sur les navires immatriculés au
-registre international français.
+Les agents de contrôle de l'inspection du travail contrôlent les conditions d'engagement, d'emploi, de travail, de protection
+sociale et de vie à bord des navires immatriculés au registre international français et constatent les infractions aux
+dispositions du titre IV du livre V et du titre II du présent livre et aux textes pris pour leur application.
 
-Ses agents contrôlent les conditions d'engagement, d'emploi, de travail, de protection sociale et de vie à bord et constatent
-les infractions aux dispositions du titre IV du livre V et du titre II du présent livre et aux textes pris pour leur
-application.
-
-Un décret en Conseil d'Etat fixe les conditions dans lesquelles les inspecteurs et contrôleurs du travail interviennent.
+Un décret en Conseil d'Etat fixe les conditions dans lesquelles les agents de contrôle de l'inspection du travail
+interviennent.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2005-412 du 3 mai 2005 - art. 27 (Ab)
+	  - Loi n°2016-1088 du 8 août 2016 - art. 113 (V)
 
 	**Codifié par**:
 
