--- a/01. PARTIE LEGISLATIVE/Article L6524-4 - 23077641.md
+++ b/01. PARTIE LEGISLATIVE/Article L6524-4 - 23077641.md
@@ -2,24 +2,28 @@
 
 Dans les entreprises dans lesquelles un collège électoral spécifique est créé pour les personnels navigants techniques,
 lorsque la convention ou l'accord d'entreprise ou d'établissement ne concerne que les personnels navigants techniques, sa
-validité est constatée dans les conditions définies à l'article L. 2232-12 du code du travail, appréciée dans ce collège.
+validité est constatée dans les conditions définies à l'article L. 2232-12 du code du travail. Les taux de 30 % et de 50 %
+mentionnés au même article L. 2232-12 sont appréciés à l'échelle de ce collège.
 
 **Nota:**
 
-Le 
-  _a)_ du 12° de l'article 6 de l'ordonnance n° 2011-204 du 24 février 2011, introduisant les mots : ", appréciée dans ce
-collège" entre en vigueur le 1er décembre 2010 conformément à l'article 8 de ladite ordonnance.
+Conformément à l'article 21 IX de la loi n° 2016-1088 du 8 août 2016, les présentes dispositions s'appliquent à compter du
+1er janvier 2017 aux accords collectifs qui portent sur la durée du travail, les repos et les congés et, dès la publication
+de la présente loi, aux accords mentionnés à l'article L. 2254-2 du code du travail.
+
+Elles s'appliquent à compter du 1er septembre 2019 aux autres accords collectifs, à l'exception de ceux mentionnés à
+l'article L. 5125-1 du code du travail.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
+	  - Loi n°2016-1088 du 8 août 2016 - art. 21 (V)
 
 	**Cite**:
 
 	  - Code du travail - art. L2232-12
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
