--- a/01. PARTIE LEGISLATIVE/Article L6525-5 - 23077622.md
+++ b/01. PARTIE LEGISLATIVE/Article L6525-5 - 23077622.md
@@ -1,26 +1,26 @@
 # Article L6525-5
 
 Les conditions d'application aux personnels navigants professionnels de l'aviation civile des dispositions des articles L.
-1225-47 à L. 1225-60, L. 3122-28, L. 3123-1, L. 3123-2, 
-L. 3123-5 à L. 3123-8, L. 3123-10, L. 3123-11, L. 3123-14 à L. 3123-23 et L. 3142-78 à L. 3142-99 du code du travail,
-relatifs au congé parental d'éducation, à la pratique du sport, au passage à temps partiel, au congé sabbatique et au congé
-pour création d'entreprise sont fixées, compte tenu des adaptations nécessaires, par décret en Conseil d'Etat.
+1225-47 à L. 1225-60, L. 3123-1 à L. 3123-3, des premier et troisième alinéas de l'article L. 3123-5, des articles L. 3123-6
+à L. 3123-11, L. 3123-13, L. 3123-17 à L. 3123-21 et L. 3123-23 à L. 3123-31 et du chapitre II du titre IV du livre Ier de la
+troisième partie du code du travail, relatifs au congé parental d'éducation, à la pratique du sport, au passage à temps
+partiel, au congé sabbatique et au congé pour création d'entreprise sont fixées, compte tenu des adaptations nécessaires, par
+décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2016-1088 du 8 août 2016 - art. 8 (V)
+	  - Loi n°2016-1088 du 8 août 2016 - art. 9
+
 	**Cite**:
 
-	  - Code du travail - art. L1225-47 (V)
-	  - Code du travail - art. L3122-28 (V)
-	  - Code du travail - art. L3123-1 (V)
-	  - Code du travail - art. L3123-10 (V)
-	  - Code du travail - art. L3123-14 (V)
+	  - Code du travail - art. L1225-47
+	  - Code du travail - art. L3123-1
+	  - Code du travail - art. L3123-13
 	  - Code du travail - art. L3123-5 (V)
-	  - Code du travail - art. L3142-78 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L422-5 (Ab), alinéa 7, congé parental, repos de nuit
+	  - Code du travail - art. L3123-6
 
 	**Codifié par**:
 
