--- a/01. PARTIE LEGISLATIVE/Article L6111-1 - 23078482.md
+++ b/01. PARTIE LEGISLATIVE/Article L6111-1 - 23078482.md
@@ -1,16 +1,30 @@
 # Article L6111-1
 
-Un aéronef ne peut circuler que s'il est immatriculé.
+I.- Un aéronef ne peut circuler que s'il est immatriculé.
+
+II.-Par dérogation au I, les aéronefs circulant sans personne à bord et opérés par un télépilote au sens de l'article L.
+6214-1, dont la masse n'excède pas 25 kilogrammes, ne sont pas soumis à l'obligation d'immatriculation. 
+
+Les aéronefs circulant sans personne à bord et opérés par un télépilote au sens du même article L. 6214-1 sont soumis à un
+régime d'enregistrement par voie électronique si leur masse est supérieure ou égale à un seuil fixé par voie réglementaire,
+qui ne peut être supérieur à 800 grammes. 
+
+Les modalités d'application du présent II, à l'exception de la définition du seuil mentionné au deuxième alinéa, sont fixées
+par décret en Conseil d'Etat. 
+
+III.-Par dérogation au I, certains aéronefs non mentionnés au II sont exemptés de l'obligation d'immatriculation en raison de
+leurs caractéristiques particulières. La liste des catégories de ces aéronefs et les modalités d'application du présent III
+sont fixées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 1
 
 	**Cité par**:
 
 	  - Loi n°2016-1428 du 24 octobre 2016 - art. 4 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L121-1 (Ab)
 
 	**Codifié par**:
 
