--- a/01. PARTIE LEGISLATIVE/Article L6772-1 - 23077363.md
+++ b/01. PARTIE LEGISLATIVE/Article L6772-1 - 23077363.md
@@ -6,7 +6,15 @@ Le chapitre II du titre II du livre II est applicable en Polynésie française d
 2012-872 du 12 juillet 2012 portant application de divers règlements du Parlement européen et du Conseil en matière
 d'aviation civile.
 
+Le  chapitre IV du titre Ier et la section 6 du chapitre II du titre III du  livre II sont applicables en Polynésie française
+dans leur rédaction  résultant de la loi n° 2016-1428 du 24 octobre 2016 relative au renforcement de la sécurité de l'usage
+des drones civils.
+
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 6
 
 	**Codifié par**:
 
@@ -15,7 +23,3 @@ d'aviation civile.
 	**Cite**:
 
 	  - Ordonnance n°2012-872 du 12 juillet 2012
-
-	**Modifié par**:
-
-	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
