--- a/01. PARTIE LEGISLATIVE/Article L6781-1 - 23077301.md
+++ b/01. PARTIE LEGISLATIVE/Article L6781-1 - 23077301.md
@@ -2,7 +2,14 @@
 
 Les dispositions du livre Ier de la présente partie sont applicables à Wallis-et-Futuna.
 
+L'article L. 6111-1 est applicable à Wallis-et-Futuna dans sa rédaction résultant de la loi n° 2016-1428 du 24 octobre 2016
+relative au renforcement de la sécurité de l'usage des drones civils.
+
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 6
 
 	**Codifié par**:
 
