--- a/01. PARTIE LEGISLATIVE/Article L6792-1 - 23077222.md
+++ b/01. PARTIE LEGISLATIVE/Article L6792-1 - 23077222.md
@@ -6,11 +6,11 @@ Le chapitre II du titre II du livre II est applicable aux Terres australes et an
 de l'ordonnance n° 2012-872 du 12 juillet 2012 portant application de divers règlements du Parlement européen et du Conseil
 en matière d'aviation civile.
 
+Le  chapitre IV du titre Ier et la section 6 du chapitre II du titre III du  livre II sont applicables dans les Terres
+australes et antarctiques  françaises dans leur rédaction résultant de la loi n° 2016-1428 du 24 octobre 2016 relative au
+renforcement de la sécurité de l'usage des drones civils.
+
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cite**:
 
@@ -18,4 +18,8 @@ en matière d'aviation civile.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 6
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
