--- a/01. PARTIE LEGISLATIVE/Article L6761-1 - 23077434.md
+++ b/01. PARTIE LEGISLATIVE/Article L6761-1 - 23077434.md
@@ -5,11 +5,14 @@ Les dispositions du livre Ier sont applicables en Nouvelle-Calédonie.
 Les sections 1 et 2 du chapitre II du titre III du livre Ier sont applicables en Nouvelle-Calédonie dans les conditions
 fixées à l'article L. 5761-1.
 
+L'article L. 6111-1 est applicable en Nouvelle-Calédonie dans sa rédaction résultant de la loi n° 2016-1428 du 24 octobre
+2016 relative au renforcement de la sécurité de l'usage des drones civils.
+
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 43 (V)
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 6
 
 	**Cite**:
 
