--- a/01. PARTIE LEGISLATIVE/Article L6771-1 - 23077367.md
+++ b/01. PARTIE LEGISLATIVE/Article L6771-1 - 23077367.md
@@ -5,11 +5,14 @@ Les dispositions du titre Ier et du titre IV du livre Ier de la présente partie
 Le chapitre II du titre III du même livre Ier est également applicable en Polynésie française sous réserve, pour les sections
 1 et 2, des conditions fixées à l'article L. 5771-1.
 
+L'article L. 6111-1 est applicable en Polynésie française dans sa rédaction résultant de la loi n° 2016-1428 du 24 octobre
+2016 relative au renforcement de la sécurité de l'usage des drones civils.
+
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 43 (V)
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 6
 
 	**Cite**:
 
