--- a/01. PARTIE LEGISLATIVE/Article L6791-1 - 23077226.md
+++ b/01. PARTIE LEGISLATIVE/Article L6791-1 - 23077226.md
@@ -2,7 +2,14 @@
 
 Les dispositions du livre Ier de la présente partie sont applicables aux Terres australes et antarctiques françaises.
 
+L'article L. 6111-1 est applicable dans les Terres australes et antarctiques françaises dans sa rédaction résultant de la loi
+n° 2016-1428 du 24 octobre 2016 relative au renforcement de la sécurité de l'usage des drones civils.
+
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2016-1428 du 24 octobre 2016 - art. 6
 
 	**Codifié par**:
 
