--- a/02. PARTIE REGLEMENTAIRE/Article R1211-1 - 28996319.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1211-1 - 28996319.md
@@ -3,32 +3,27 @@
 En application du premier alinéa de l'article L. 1211-5, l'Etat et les autres autorités publiques mentionnées à l'article L.
 1211-4 ont accès sur leur demande aux informations relatives au trafic ferroviaire et aux données économiques nécessaires à
 la conduite d'études et de recherches de nature à faciliter la réalisation des objectifs assignés au système des transports
-auprès des entreprises ferroviaires opérant sur les infrastructures mentionnées aux articles L. 2122-1, 
-L. 2111-6, L. 2112-1 et L. 2112-4 ainsi qu'auprès des gestionnaires de ces infrastructures. Ces informations et données sont
-rendues accessibles par voie électronique.
+auprès des entreprises ferroviaires opérant sur les infrastructures mentionnées aux articles L. 2122-1, L. 2111-5, L. 2111-6,
+L. 2112-1, L. 2112-4 et L. 2112-5 ainsi qu'auprès des gestionnaires ou exploitants de ces infrastructures. Ces informations
+et données sont rendues accessibles par voie électronique.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2012-555 du 23 avril 2012 - art. 1, alinéas 1 et 2, paragraphe 1er et alinéas 24, paragraphe VI (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1468 du 28 octobre 2016 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L1211-4 (V)
-	  - Code des transports - art. L1211-5 (V)
-	  - Code des transports - art. L2111-6 (V)
-	  - Code des transports - art. L2112-1 (V)
-	  - Code des transports - art. L2112-4 (V)
-	  - Code des transports - art. L2122-1 (V)
+	  - Code des transports - art. L1211-5
+	  - Code des transports - art. L2111-5
+	  - Code des transports - art. L2112-1
+	  - Code des transports - art. L2112-5
+	  - Code des transports - art. L2122-1
 
 	**Cité par**:
 
