--- a/02. PARTIE REGLEMENTAIRE/Article R5351-1 - 30031916.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5351-1 - 30031916.md
@@ -2,21 +2,23 @@
 
 L'autorité portuaire assure la gestion de la circulation ferroviaire sur les voies ferrées portuaires.
 
-Elle assure à ce titre l'égal accès aux voies ferrées portuaires.
+Elle assure à ce titre un accès dans des conditions équitables, transparentes et non discriminatoires aux voies ferrées
+portuaires conformément aux dispositions du titre V du livre III de la cinquième partie du présent code et du décret n°
+2012-70 du 20 janvier 2012 relatif aux installations de service du réseau ferroviaire.
 
 **Liens relatifs à cet article**
+
+	**Cite**:
+
+	  - Décret n°2012-70 du 20 janvier 2012
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R411-1 (Ab)
+	  - Décret n°2016-1468 du 28 octobre 2016 - art. 4
 
 	**Cité par**:
 
