--- a/02. PARTIE REGLEMENTAIRE/Article R5351-3 - 30031920.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5351-3 - 30031920.md
@@ -1,26 +1,22 @@
 # Article R5351-3
 
 L'établissement, la modification ou la suppression d'un raccordement entre le réseau ferré national et les voies ferrées
-portuaires est financé par l'établissement public " Réseau ferré de France " dans les conditions fixées par l'article 4 du
-décret n° 97-444 du 5 mai 1997 relatif aux missions et aux statuts de Réseau ferré de France.
+portuaires est financé par l'établissement public " SNCF Réseau  " dans les conditions fixées par l'article 4 du décret n°
+97-444 du 5 mai 1997 relatif aux missions et aux statuts de SNCF Réseau.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°97-444 du 5 mai 1997 - art. 4 (M)
+	  - Décret n°97-444 du 5 mai 1997 - art. 4
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R411-3 (Ab)
+	  - Décret n°2016-1468 du 28 octobre 2016 - art. 4
 
 	**Cité par**:
 
