--- a/02. PARTIE REGLEMENTAIRE/Article R5352-2 - 30031926.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5352-2 - 30031926.md
@@ -1,30 +1,32 @@
 # Article R5352-2
 
-L'autorité portuaire établit et publie, après consultation des entreprises ferroviaires utilisant le réseau des voies ferrées
-portuaires relevant de sa compétence et des usagers du transport du fret sur ce réseau, un document de référence de ce réseau
-exposant les caractéristiques de celui-ci et précisant les conditions permettant d'y accéder. 
+Pour l'application de l'article L. 2123-3-2 et du IV de l'article 2 du décret n° 2012-70 du 20 janvier 2012 relatif aux
+installations de service du réseau ferroviaire, l'autorité portuaire des grands ports maritimes et des ports autonomes
+établit et publie sur son site internet, après consultation des entreprises ferroviaires utilisant l'infrastructure des voies
+ferrées portuaires relevant de sa compétence et des usagers du transport du fret sur ces voies, un document de référence
+exposant les caractéristiques de celui-ci, précisant les conditions permettant d'y accéder et les conditions de fourniture
+des services sur cette infrastructure. 
 
-Le document de référence précise, en cas d'application de l'article L. 5352-2, les principes de tarification et les tarifs
-des redevances d'utilisation. Il fixe les modalités de répartition des capacités et les procédures d'attribution de celles-
-ci. 
+Le document de référence fournit toutes les informations sur les tarifs des redevances. 
 
-Ce document est tenu à jour et modifié en tant que de besoin, un délai minimal de quatre mois devant séparer la publication
-de toute modification de la date limite fixée pour la présentation de demandes de capacités d'infrastructure.
+Ce document est tenu à jour et mis gratuitement à disposition sous forme électronique. 
+
+L'autorité portuaire transmet au gestionnaire d'infrastructure du réseau auquel les voies ferrées portuaires sont reliées
+l'adresse du site internet mentionné à l'article 2 du décret n° 2012-70 du 20 janvier 2012 relatif aux installations de
+service du réseau ferroviaire dans les conditions prévues à l'article L. 2123-3-2 et au IV de l'article 2 du décret n°
+2012-70 du 20 janvier 2012 relatif aux installations de service du réseau ferroviaire.
 
 **Liens relatifs à cet article**
+
+	**Cite**:
+
+	  - Décret n°2012-70 du 20 janvier 2012 - art. 2
+	  - Code des transports - art. L2123-3-2
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R411-5 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. L5352-2 (V)
+	  - Décret n°2016-1468 du 28 octobre 2016 - art. 4
