--- a/02. PARTIE REGLEMENTAIRE/Article R5352-1 - 30031924.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5352-1 - 30031924.md
@@ -1,14 +1,14 @@
 # Article R5352-1
 
-La convention de raccordement conclue entre Réseau ferré de France et l'autorité portuaire en application de l'article L.
-5351-4 est approuvée par le ministre chargé des transports. Elle définit les obligations et responsabilités de chacune des
-parties sur leurs infrastructures respectives. 
+La convention de raccordement conclue entre SNCF Réseau  et l'autorité portuaire en application de l'article L. 5351-4
+définit les obligations et responsabilités de chacune des parties sur leurs infrastructures respectives. 
 
 Elle porte notamment sur : 
 
-1° La description des voies et installations assurant l'interface entre les deux réseaux ; 
+1° La description des voies et installations assurant l'interface entre le réseau ferré national et les voies ferrées
+portuaires  ; 
 
-2° Les modalités de gestion des capacités d'infrastructures sur ces voies et installations ; 
+2° Les modalités de gestion des capacités sur ces voies et installations ; 
 
 3° Les modalités de gestion des circulations ferroviaires d'un réseau à l'autre ; 
 
@@ -22,17 +22,13 @@ Elle porte notamment sur :
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R411-4 (Ab)
+	  - Décret n°2016-1468 du 28 octobre 2016 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L5351-4 (V)
+	  - Code des transports - art. L5351-4
 
 	**Cité par**:
 
