--- a/02. PARTIE REGLEMENTAIRE/Article R1621-16 - 28997057.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-16 - 28997057.md
@@ -1,27 +1,26 @@
 # Article R1621-16
 
-Pour chaque enquête, le directeur du BEA propose au ministre, soit le recours aux moyens propres du bureau et, le cas
-échéant, pour les accidents de transport terrestre, à des enquêteurs techniques non permanents recrutés dans les conditions
-fixées par l'article R. 1621-24, soit la constitution d'une commission d'enquête. Dans ce dernier cas, le ministre désigne,
-sur proposition du directeur, le président de la commission choisi parmi les enquêteurs du BEA, ainsi que les autres membres
-de la commission choisis en fonction de leurs compétences et présentant des garanties d'indépendance et d'impartialité. Les
-membres de la commission ont la qualité d'enquêteur technique.
+Le directeur de chaque bureau d'enquête détermine les moyens et les  compétences opérationnelles nécessaires à la réalisation
+de chaque  enquête. 
+
+Il peut mettre en place une commission  d'enquête s'il juge inadapté le recours aux moyens propres du bureau  d'enquête et,
+le cas échéant, pour les accidents de transport terrestre,  à des enquêteurs techniques non permanents recrutés dans les
+conditions  fixées par l'article R. 1621-24. 
+
+Cette  commission est présidée par un enquêteur du BEA et comprend des membres  choisis en fonction de leurs compétences et
+présentant des garanties  d'indépendance et d'impartialité. Les membres de la commission ont la  qualité d'enquêteur
+technique.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 15, alinéa 2 (Ab)
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 21, alinéa 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
 
-	**Cite**:
+	**Cité par**:
 
 	  - Code des transports - art. R1621-24 (V)
