--- a/02. PARTIE REGLEMENTAIRE/Article R1621-21 - 28997067.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-21 - 28997067.md
@@ -2,16 +2,17 @@
 
 Le directeur de chaque bureau d'enquêtes établit un rapport annuel sur ses activités qui est rendu public.
 
+Pour  ce qui concerne le BEA-TT, cette publication intervient au plus tard le  30 septembre de chaque année. Ce rapport rend
+compte des enquêtes  effectuées l'année précédente, des recommandations formulées en matière  de sécurité et des mesures qui
+ont été prises à la suite des  recommandations formulées précédemment. Ce rapport annuel est communiqué  à l'Agence de
+l'Union européenne pour les chemins de fer.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 11 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
