--- a/02. PARTIE REGLEMENTAIRE/Article R1621-9 - 28997039.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-9 - 28997039.md
@@ -8,20 +8,19 @@ Pour les accidents et incidents d'aviation civile, les destinataires des recomma
 procédure définie à l'article 18 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre 2010 sur les
 enquêtes et la prévention des accidents et des incidents dans l'aviation civile et abrogeant la directive 94/56/CE.
 
+Pour  les accidents et incidents ferroviaires, les recommandations de  sécurité sont adressées à l'Etablissement public de
+sécurité ferroviaire  (EPSF) et, si cela est nécessaire en raison de la nature ou du  caractère de ces recommandations, à
+d'autres autorités publiques, à  d'autres organismes ou à d'autres Etats membres.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 9, alinéa 1 (Ab)
-	  - Code de l'aviation civile - art. R731-2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
 
 	**Cité par**:
 
