--- a/02. PARTIE REGLEMENTAIRE/Article R1621-12 - 28997049.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-12 - 28997049.md
@@ -5,22 +5,22 @@ de transport et les infrastructures dont elles ont la charge, informent sans dé
 événements de mer, accidents ou incidents de transport terrestre mettant en cause gravement la sécurité des personnes,
 notamment lorsqu'ils impliquent des transports effectués par des professionnels.
 
+Pour  ce qui concerne les accidents et incidents ferroviaires, les  entreprises ferroviaires et les gestionnaires
+d'infrastructure sont  soumis à la même obligation d'information auprès du BEA-TT. Ils lui  communiquent toutes les
+informations dont ils disposent, en les mettant à  jour à mesure de leur disponibilité.
+
 Pour l'exercice de leurs missions, les bureaux d'enquêtes peuvent faire appel à l'ensemble des services de l'Etat compétents
 dans leurs domaines respectifs.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 2 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
 
 	**Cité par**:
 
