--- a/02. PARTIE REGLEMENTAIRE/Article R1621-23 - 28997073.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-23 - 28997073.md
@@ -1,19 +1,35 @@
 # Article R1621-23
 
-Une enquête doit être réalisée par le BEA-TT après tout accident ferroviaire grave. Le directeur du BEA-TT peut également
-décider d'ouvrir une enquête après un accident ou incident qui, dans des circonstances voisines, aurait pu conduire à un
-accident ferroviaire grave.
+I.-Une enquête est effectuée par le BEA-TT après tout accident ferroviaire grave survenu sur le territoire national. 
+
+II.-Le directeur du BEA-TT peut également décider d'ouvrir une enquête  après un accident ou un incident qui, dans des
+circonstances légèrement  différentes, aurait pu conduire à un accident ferroviaire grave, en  tenant compte des éléments
+suivants : 
+
+a) La gravité de l'accident ou de l'incident ; 
+
+b) Son inscription éventuelle dans une série d'accidents ou d'incidents  susceptibles d'affecter le système dans son
+ensemble ; 
+
+c) Ses conséquences sur la sécurité ferroviaire ; 
+
+d) Les requêtes des gestionnaires de l'infrastructure, des entreprises ferroviaires, de l'EPSF ou des Etats membres. 
+
+Le directeur du BEA-TT décide au plus tard deux mois après la  notification de l'accident ou de l'incident, de lancer ou non
+une  enquête. 
+
+III.-Pour les accidents ou incidents  survenus sur une section frontière entre deux Etats membres ou pour ceux  dont il n'est
+pas possible de déterminer dans quel Etat membre ils se  sont produits, le BEA-TT et l'organisme d'enquête compétent de
+l'autre  Etat membre se mettent d'accord entre eux pour définir si l'enquête est  effectuée par l'un d'entre eux ou en
+coopération. Dans le premier cas,  l'autre organisme peut participer à l'enquête et avoir accès à tous les  résultats de
+celle-ci.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 20-1 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
