--- a/02. PARTIE REGLEMENTAIRE/Article R1621-24 - 28997075.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-24 - 28997075.md
@@ -1,23 +1,21 @@
 # Article R1621-24
 
-Les enquêteurs techniques non permanents mentionnés à l'article R. 1621-16 sont mis à la disposition du directeur du BEA ou
-recrutés temporairement. Ils sont choisis parmi les membres des corps d'inspection et de contrôle, en activité ou retraités,
-ainsi que parmi les salariés actifs ou retraités d'une entreprise de transport ou de gestion d'infrastructure.
+Les ressources suffisantes pour mener ses missions sont mises à la disposition du directeur du BEA-TT.  
+
+Les enquêteurs techniques non permanents mentionnés à l'article R. 1621-16 sont mis à la disposition du directeur du  BEA-TT
+ou recrutés temporairement. Ils sont choisis parmi les membres des corps d'inspection et de contrôle, en activité ou
+retraités. Le  directeur du BEA-TT peut également faire appel à toute personne du  secteur des transports disposant des
+compétences nécessaires et  présentant les garanties d'indépendance requises au regard de l'enquête à  effectuer.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 21, alinéa 2, en ce qui concerne les non-permanents (Ab)
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 22 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
 
 	**Cité par**:
 
