--- a/02. PARTIE REGLEMENTAIRE/Article R1621-25 - 28997077.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1621-25 - 28997077.md
@@ -1,23 +1,25 @@
 # Article R1621-25
 
-Le directeur du BEA-TT peut autoriser des enquêteurs techniques relevant d'organismes étrangers homologues à participer à des
-investigations relatives à un accident ou un incident survenu sur le territoire national soit lorsqu'un véhicule immatriculé
-dans leur pays d'origine est impliqué, soit lorsque l'exploitant ou le constructeur du moyen ou du système de transport en
-cause est établi dans leur pays d'origine.
+Le  directeur du BEA-TT invite et autorise des enquêteurs techniques  relevant d'organismes homologues d'un Etat membre de
+l'Union européenne,  ou d'un Etat appliquant des règles équivalentes à celles de l'Union  européenne en vertu d'accords
+conclus avec elle, à participer à  l'enquête chaque fois qu'une entreprise ferroviaire établie et titulaire  d'une licence
+dans leur Etat membre d'origine est impliquée dans  l'accident ou l'incident, ou lorsqu'un véhicule immatriculé ou entretenu
+dans leur Etat membre d'origine est impliqué dans l'accident ou  l'incident. Le directeur du BEA-TT donne à ces organismes
+invités à  participer à l'enquête accès aux informations et aux éléments probants  nécessaires pour leur permettre d'y
+participer effectivement.  
+
+Le directeur du BEA-TT peut autoriser des enquêteurs techniques relevant  des organismes homologues mentionnés au premier
+alinéa à participer à  des investigations relatives à un accident ou un incident survenu sur le  territoire national. 
 
 Le directeur du BEA-TT organise la participation française aux enquêtes techniques menées par un Etat étranger dans les
 conditions prévues par les conventions internationales et par le droit de l'Union européenne.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2004-85 du 26 janvier 2004 - art. 24 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1569 du 22 novembre 2016 - art. 1
